--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cluster": "^0.7.7",
     "concurrently": "^5.2.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.4.10"
+    "nodemailer": "^6.4.10",
+    "xoauth2": "^1.2.0"
   }
 }
